--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,13 @@
-$primary-color: #225F80;
-$black: #333;
-$lightgray: lightgray;
-$white: white;
+$primary-color: #F82462;
+$primary-light-color: #FA6691;
+$secondary-color: #252525;
+$secondary-light-color: #3A3A3A;
+$white: #ffffff;
+$gray-light: #f4f5f6;
+$gray-lighten: #f8f8f8;
+
+
+
 
 html, body, .container {
   height: 100%;
@@ -9,9 +15,12 @@ html, body, .container {
 
 body {
   margin: 0;
-  font-family: Roboto,sans-serif;
+  padding :0;
+  box-sizing: border-box;
+  font-family: 'Helvetica Neue',sans-serif;
+  font-size: 100%;
+  line-height: 144%;
 }
-
 .app-content {
   display: flex;
   margin-top: 10px;
