--- a/src/scss/botton.scss
+++ b/src/scss/botton.scss
@@ -1,5 +1,5 @@
-// NOTE : bttn to avoid confilct with bootstrap 4 classes
-.bttn{
+// NOTE : theme-btn to avoid confilct with bootstrap 4 classes
+.theme-btn{
     display: inline-block;
     font-weight: 400;
     text-align: center;
@@ -10,30 +10,36 @@
     -ms-user-select: none;
     user-select: none;
     border: 1px solid transparent;
-    padding: .375rem .75rem;
+    padding: .3rem .75rem;
     font-size: 1rem;
     line-height: 1.5;
+    width:125px;
+    height: 40px;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    &:focus{
+      outline: none;
+    }
 }
-.bttn-primary{
+.theme-btn-primary{
   background-color: $primary-color; 
   color :$white; 
   
   &:hover{
-    background-color: primary-light-color;
+    background-color: $primary-light-color;
     color :$white; 
   }
 }
-.bttn-secondery{
-  border:1px solid $secondary-color;  
-  color :$secondary-color;
+.theme-btn-secondery{
+  border:1px solid #666;  
+  background-color: $white;
+  color :$secondary-light-color;
   
   &:hover{
     background-color: $secondary-color;
     color :$white;
   }
 }
-.bttn-outline-white{
+.theme-btn-outline-white{
   border:1px solid $white;
   color :$white;
   
@@ -43,7 +49,7 @@
     
   }
 }
-.bttn-filled-white{
+.theme-btn-filled-white{
   background-color: $white;
   color :$primary-color;
   
@@ -52,8 +58,8 @@
     opacity: 0.8;
   }
 }
-.bttn-outline-pink{
-  background-color: $primary-color
+.theme-btn-outline-pink{
+  background-color: $primary-color;
   color :$white;
   
   &:hover{
@@ -61,4 +67,30 @@
     color :$primary-color;
     
   }
+}
+
+.btn-social{
+  color:$white;
+  width:165px;
+  position: relative;
+  span{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255,255,255,0.2);
+  }
+}
+.btn-fb{
+  background-color: #3b5998;
+}
+.btn-vimeo{
+  background-color: #1ab7ea; 
+}
+.btn-insta{
+  background-color: #e1306c;
 }
