Header almost Complete ,finishing Left

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,7 +19,7 @@ body {
   box-sizing: border-box;
   font-family: 'Helvetica Neue',sans-serif !important;
   color:$secondary-color;
-  font-size: 100%;
+  font-size: 14px;
   line-height: 144%;
 }
 .bg-gray-light{
