--- a/src/scss/botton.scss
+++ b/src/scss/botton.scss
@@ -1,6 +1,7 @@
 // NOTE : theme-btn to avoid confilct with bootstrap 4 classes
 .theme-btn{
     display: inline-block;
+    font-size: 0.85rem;
     font-weight: 400;
     text-align: center;
     white-space: nowrap;
@@ -10,8 +11,7 @@
     -ms-user-select: none;
     user-select: none;
     border: 1px solid transparent;
-    padding: .3rem .75rem;
-    font-size: 1rem;
+    padding: .25rem .75rem;
     line-height: 1.5;
     width:125px;
     height: 40px;
@@ -41,6 +41,7 @@
 }
 .theme-btn-outline-white{
   border:1px solid $white;
+  background-color: transparent;
   color :$white;
   
   &:hover{
