--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -14,7 +14,10 @@ footer{
   }
   .footer-nav{
     .nav{
+      height: 100%;
       justify-content: center;
+      align-items: center;
+
       a{
        font-size : 0.75rem;
        line-height: 126%;
