--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,8 +1,11 @@
 @import 'app';
 @import 'typography';
 @import 'botton';
+@import 'form';
+@import 'custom-input';
 @import 'navbar';
 @import 'header';
 @import 'footer';
 @import 'home';
-@import 'about'
+@import 'about';
+@import 'login';
