--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,9 +6,6 @@ $white: #ffffff;
 $gray-light: #f4f5f6;
 $gray-lighten: #f8f8f8;
 
-
-
-
 html, body, .container {
   height: 100%;
 }
@@ -74,8 +71,14 @@ input::-webkit-input-placeholder {
 
 .flex-row {
   display: flex;
+  align-items: center;
 }
 
 .btn-link, .btn-link:hover {
   color: $primary-color;
+}
+
+a, a:hover {
+  color: inherit;
+  text-decoration: none;
 }
