--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -42,7 +42,7 @@
         list-style: none;
         margin: 0;
         li{
-          a{
+          a {
             font-size: 2.5rem;
             font-weight: 700;
             text-decoration: none;
@@ -70,7 +70,7 @@
     margin-left: auto;
     padding: 0.5rem 1rem;
     li{
-      a{
+      & > a{
         display: block;
         padding: .55rem 1rem;
         font-size: 0.9rem;
