--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,9 +14,9 @@ body {
   margin: 0;
   padding :0;
   box-sizing: border-box;
-  font-family: 'Helvetica Neue',sans-serif !important;
+  font-family: 'Helvetica Neue',sans-serif;
   color:$secondary-color;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 144%;
 }
 .bg-gray-light{
