--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -1,63 +1,35 @@
-
-@font-face {
-	font-family: 'GothamPro';
-	src: url('/assets/fonts/GothamPro/GothamPro.eot?') format('eot'),
-	     url('/assets/fonts/GothamPro/GothamPro.otf')  format('opentype'),
-	     url('/assets/fonts/GothamPro/GothamPro.woff') format('woff'),
-	     url('/assets/fonts/GothamPro/GothamPro.ttf')  format('truetype'),
-	     url('/assets/fonts/GothamPro/GothamPro.svg#GothamPro') format('svg');
-}
-
-@font-face {
-	font-family: 'GothamPro-Black';
-	src: url('/assets/fonts/GothamPro-Black/GothamPro-Black.eot?') format('eot'),
-	     url('/assets/fonts/GothamPro-Black/GothamPro-Black.otf')  format('opentype'),
-	     url('/assets/fonts/GothamPro-Black/GothamPro-Black.woff') format('woff'),
-	     url('/assets/fonts/GothamPro-Black/GothamPro-Black.ttf')  format('truetype'),
-	     url('/assets/fonts/GothamPro-Black/GothamPro-Black.svg#GothamPro-Black') format('svg');
-}
-
-
-@font-face {
-	font-family: 'GothamPro-Bold';
-	src: url('/assets/fonts/GothamPro-Bold/GothamPro-Bold.eot?') format('eot'),
-	     url('/assets/fonts/GothamPro-Bold/GothamPro-Bold.otf')  format('opentype'),
-	     url('/assets/fonts/GothamPro-Bold/GothamPro-Bold.woff') format('woff'),
-	     url('/assets/fonts/GothamPro-Bold/GothamPro-Bold.ttf')  format('truetype'),
-	     url('/assets/fonts/GothamPro-Bold/GothamPro-Bold.svg#GothamPro-Bold') format('svg');
-}
-
-
 h1{
-  font-family: 'GothamPro-Black';
-  color:$secondary-color;
-  font-size: 3.0625rem;
+  font-family: 'GothamPro';
+  color: $secondary-color;
+  font-size: 49px;
+	font-weight: bold;
 }
 h2{
-  font-family: 'GothamPro-Black';
+  font-family: 'GothamPro';
   color:$secondary-color;
-  font-size: 2.6875rem;
+  font-size: 43px;
+	font-weight: bold;
 }
 h3{
-  font-family: 'GothamPro-Black';
+  font-family: 'GothamPro';
    color:$secondary-color;
-  font-size: 2rem;
+  font-size: 32px;
 }
 h4{
   font-family: 'GothamPro-Bold';
    color:$secondary-color;
-  font-size: 1.25rem;
+  font-size: 20px;
 }
 h5{
   font-family: 'GothamPro-Bold';
    color:$secondary-color;
-  font-size: 1.125rem;
+  font-size: 18px;
   letter-spacing: 9%;
 }
 h6{
   font-family: 'GothamPro-Bold';
    color:$secondary-color;
-  font-size: 1rem;
+  font-size: 16px;
   letter-spacing: 9%;
 }
 /*
@@ -74,16 +46,16 @@ h6{
     text-align: center;
 }
 .theme-text-small{
-  font-size : 0.75rem;
+  font-size : 12px;
   line-height: 126%;
 }
 .theme-text-bold{
-  font-size:1rem;
+  font-size: 16px;
   line-height: 144%;
   font-weight: bold;
 }
 .theme-text-small-bold{
-  font-size:0.75rem;
+  font-size: 12px;
   line-height: 126%;
   font-weight: bold;
 }
