--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,6 +19,11 @@ body {
   font-size: 16px;
   line-height: 144%;
 }
+
+.primary-color {
+  color: $primary-color;
+}
+
 .bg-gray-light{
   background-color: $gray-light;
 }
