--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -41,5 +41,9 @@
 .login.success-message {
   .theme-btn-link {
     margin: 10px 0 0 0;
+
+    &:nth-child(n + 2) {
+      margin-left: 10px;
+    }
   }
 }
