--- a/src/scss/addgear.scss
+++ b/src/scss/addgear.scss
@@ -18,13 +18,27 @@
       align-items: center;
       opacity: 0.2;
       color: $primary-color;
+      position: relative;
 
       i {
         font-size: 32px;
+        position: relative;
+        z-index: 1000;
+        background-color: white;
       }
 
       &.active {
         opacity: 1;
+      }
+
+      &:nth-child(n+2):before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        border-top: 1px solid $primary-color;
+        left: -50%;
+        top: 16px;
       }
     }
   }
@@ -51,11 +65,16 @@
     label {
       background: white;
       color: orange;
-      padding: 8px 20px;
+      padding: 5px 15px;
       border: 1px solid lightgray;
       display: inline-block;
       border-radius: 30px;
-      margin-right: 10px;
+      margin-right: 5px;
+
+      &.active {
+        color: white;
+        background-color: #00F077;
+      }
     }
   }
 
@@ -71,6 +90,11 @@
       border: 1px solid lightgray;
       display: inline-block;
       font-size: 12px;
+
+      &.active {
+        color: white;
+        background-color: #00F077;
+      }
     }
   }
   .info-right-container {
@@ -145,6 +169,25 @@
       .theme-btn-primary {
         flex: 1;
       }
+    }
+  }
+
+  .success-message {
+    text-align: center;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 4px solid lightgray;
+    padding: 10px;
+
+    & > * {
+      margin-top: 10px;
+    }
+    
+    .flex-row {
+      justify-content: space-around;
+      width: 100%;
     }
   }
 }
