--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,7 @@
 @import 'botton';
 @import 'form';
 @import 'custom-input';
+@import 'custom-carousel';
 @import 'navbar';
 @import 'header';
 @import 'footer';
@@ -12,3 +13,4 @@
 @import 'register';
 @import 'dashboard';
 @import 'addgear';
+@import 'viewgear';
