Added checkout page UI

--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -3,7 +3,8 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-
+    align-items: center;
+    
     button:nth-child(n+2) {
       margin-left: 15px;
     }
