--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -97,6 +97,18 @@ input::-webkit-input-placeholder {
 .flex-row {
   display: flex;
   align-items: center;
+
+  & > *:nth-child(n+2) {
+    margin-left: 15px !important;
+  }
+}
+
+.flex-align-start {
+  align-items: flex-start;
+}
+
+.flex-align-stretch {
+  align-items: stretch;
 }
 
 .btn-link, .btn-link:hover {
@@ -113,6 +125,11 @@ a, a:hover {
   margin: 0;
   padding: 0;
   font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.theme-page-title {
+  @extend h3;
 }
 
 .theme-table {
@@ -120,7 +137,7 @@ a, a:hover {
   text-align: left;
   border: 20px solid #f4f5f6;
   margin-top: 15px;
-  
+
   th {
     font-weight: lighter;
     color: #6c757d !important;
@@ -140,5 +157,19 @@ a, a:hover {
       width :25%;
       border-radius:50%;
     }
+  }
+}
+
+.dropdown-toggle {
+  background: white;
+  color: black;
+  border: 1px solid lightgray;
+  width: 100%;
+  text-align: left;
+
+  &::after {
+    position: absolute;
+    right: 10px;
+    top: 50%;
   }
 }
