--- a/src/scss/viewgear.scss
+++ b/src/scss/viewgear.scss
@@ -2,6 +2,11 @@
   display: flex;
   width: 100%;
   padding: 15px;
+
+  .breadcrumb {
+    margin-left: 15px;
+  }
+
   .left-container {
     flex: 1;
     border: 1px solid lightgray;
