--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1.5rem;
+  padding-left: 15px;
   .button-toggle{
     border:none;
     background-color: transparent;
@@ -68,7 +68,7 @@
     margin-bottom: 0;
     list-style: none;
     margin-left: auto;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0;
     li{
       & > a{
         display: block;
@@ -76,6 +76,27 @@
         font-size: 0.9rem;
         color:$white;
         text-decoration: none;
+      }
+    }
+
+    .dropdown-toggle {
+      background: transparent;
+      border: none;
+      color: white;
+      padding-right: 30px;
+      img {
+        height: 32px;
+        border-radius: 50%;
+      }
+    }
+    .dropdown-menu {
+      padding: 0;
+      width: 100%;
+      .dropdown-item {
+        background: $primary-color;
+        padding: 10px;
+        color: white;
+        border-bottom: 1px solid lightgray;
       }
     }
   }
