--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@
 @import 'custom-carousel';
 @import 'navbar';
 @import 'theme-card-one';
+@import 'theme-card-two';
 @import 'header';
 @import 'footer';
 @import 'themerow';
