--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,6 @@
 $primary-color: #F82462;
 $primary-light-color: #FA6691;
+$primary-color-alpha: #f82462b8;
 $secondary-color: #252525;
 $secondary-light-color: #3A3A3A;
 $white: #ffffff;
