--- a/src/scss/botton.scss
+++ b/src/scss/botton.scss
@@ -130,3 +130,19 @@
 .btn-google-plus {
   background-color: #E03B1A;
 }
+.btn-Available{
+  background-color: $white;
+  border:1px solid rgb(6, 99, 6);
+  color: rgb(6, 99, 6);
+  padding: 0;
+  width: 100px;
+  height: 30px;
+}
+.btn-For-Rent{
+  background-color: $white;
+  border:1px solid orange;
+  color: orange;
+  padding: 0;
+  width: 100px;
+  height: 30px;
+}
