--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -42,6 +42,79 @@
   }
   .home-body{
     .theme-row{
+      justify-content: space-between;
+      .wrapper{
+        display: flex;
+        position: absolute;
+        top:0;
+        bottom:0;
+        left:0;
+        right:0;
+        z-index: 444;
+      }
+      .theme-col-1{
+        position: relative;
+        height: 200px;
+        width: 25%;
+        background: #F82462;
+        margin-right: 10%;
+        &::before{
+          position: absolute;
+          content: '';
+          right: -100px;
+          top: 0px;
+          border-style: solid;
+          border-color: #F82462 transparent transparent #F82462;
+          border-width: 200px 100px 0px 0px
+        }
+      }
+      .theme-col-2{
+        position: relative;
+        height: 200px;
+        width: 25%;
+        background: $primary-color;
+        margin-right: 10%;
+        &::after{
+          // margin-left:10px;
+          position: absolute;
+          content: '';
+          left: -100px;
+          top: 0px;
+          border-style: solid;
+          border-color: #F82462 transparent #F82462 transparent;
+          border-width: 0px 100px 200px 100px;
+        }
+        &::before{
+          position: absolute;
+          // margin-right:10px;
+          content: '';
+          right: -100px;
+          top: 0px;
+          border-style: solid;
+          border-color: #F82462 transparent transparent #F82462;
+          border-width: 200px 100px 0px 0px
+        }
+      }
+      .theme-col-3{
+        position: relative;
+        height: 200px;
+        width: 25%;
+        background: $primary-color;
+        margin-right: 5%;
+        &::after{
+          // margin-left:10px;
+          position: absolute;
+          content: '';
+          left: -100px;
+          top: 0px;
+          border-style: solid;
+          border-color: transparent transparent #F82462 transparent;
+          border-width: 0px 0px 200px 100px;
+        }
+
+      }
+    }
+    .theme-row{
       .theme-col{
         display: flex;
         -webkit-box-shadow: 1px 3px 2px 3px $gray-lighten; 
@@ -59,10 +132,12 @@
           flex:1;
           width:100%;
           height:100%;
+          margin: 0;
         }
-        div{ 
+        div.desc{ 
           flex:1;
           display: flex;
+          justify-content: center;
           flex-direction: column;
         }
         #camera{          
@@ -188,5 +263,41 @@
       background-color: $gray-light;
       padding: 3rem 0;
     }
+    .payments{
+      img{
+        width:100%;
+      }
+    }
+  }
+}
+.block-el {
+  position: relative;
+  width: 30%;
+  height: 200px;
+  padding: 30px;
+  margin: 10px;
+  float: left;
+}
+.block-el > .block-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: $white;
+  transform: skewX(-25deg);
+  box-shadow: 0 0 10px #aaa;
+  border-radius: 2px;
+  &:hover{
+    background-color: $primary-color;
+  }
+  &::before{
+    content: '';
+    position: absolute;
+    z-index: 333;
+    border-style: solid;
+    border:#fff;
+    transform: skewX(20deg) translateX(-35px);
+    border-width:200px 50px 0 30px;
   }
 }
