--- a/src/scss/botton.scss
+++ b/src/scss/botton.scss
@@ -1,7 +1,5 @@
 // NOTE : theme-btn to avoid confilct with bootstrap 4 classes
-.theme-btn{
-    
-    font-size: 0.85rem;
+.theme-btn{    
     font-weight: 400;
     text-align: center;
     white-space: nowrap;
@@ -11,10 +9,9 @@
     -ms-user-select: none;
     user-select: none;
     border: 1px solid transparent;
-    padding: .25rem .75rem;
+    padding: 8px 15px;
     line-height: 1.5;
-    width:125px;
-    height: 40px;
+    width: 100px;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     &:focus{
       outline: none;
@@ -56,7 +53,7 @@
   }
 }
 .theme-btn-filled-white{
-  border: 1px solid $primary-color;
+  border: 1px solid $primary-light-color;
   background-color: $white;
   color :$primary-color;
 
@@ -67,6 +64,7 @@
 }
 .theme-btn-outline-pink{
   background-color: $primary-color;
+  border: 1px solid $primary-light-color;
   color :$white;
 
   &:hover{
@@ -99,6 +97,7 @@
     display: block;
     height: 100%;
     width: 100%;
+    padding: 8px 15px;
   }
 }
 
