--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -331,6 +331,10 @@
   margin: 10px;
   float: left;
 }
+.block-content{
+    position: relative;
+    z-index: 3333;
+}
 .block-el > .block-bg {
   position: absolute;
   width: 100%;
@@ -341,16 +345,16 @@
   transform: skewX(-25deg);
   box-shadow: 0 0 10px #aaa;
   border-radius: 2px;
-  &:hover{
-    background-color: $primary-color;
-  }
-  &::before{
-    content: '';
-    position: absolute;
-    z-index: 333;
-    border-style: solid;
-    border:#fff;
-    transform: skewX(20deg) translateX(-35px);
-    border-width:200px 50px 0 30px;
-  }
+  // &:hover{
+  //   background-color: $primary-color;
+  // }
+  // &::before{
+  //   content: '';
+  //   position: absolute;
+  //   z-index: 333;
+  //   border-style: solid;
+  //   border:#fff;
+  //   transform: skewX(20deg) translateX(-35px);
+  //   border-width:200px 50px 0 30px;
+  // }
 }
