--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -12,7 +12,7 @@
     &:focus{
       outline: none;
     }
-    .fa-bars{
+    .fa-bars , .fa-times{
       font-size: 25px;
       color:$white;
     }
@@ -30,7 +30,15 @@
     left: 0;
     z-index: 333;
     background-color: #0809086e;
-    padding: 10rem 5rem;
+    padding: 10.35rem 5rem;
+    .fa-arrow-right{
+      position: absolute;
+      z-index: 555;
+      right: 63px;
+      bottom: 15px;
+      color: white;
+      font-size: 3rem;
+    }
     .theme-menu-content{
       position: relative;
       z-index: 555;
@@ -41,9 +49,8 @@
       height: 100%;
       left: 0;
       top: 0;
-      background-color: #f82462;
-      -webkit-transform: skewX(-10deg) translateX(-52px) skewY(-10deg);
-      transform: skewX(-10deg) translateX(-52px) skewY(-3deg) translateY(-40px);
+      background-color: $primary-color;
+      transform: skewX(-8deg) translateX(-52px) skewY(-2deg) translateY(-68px);
       border-radius: 2px;
     //   &::before{
     //   position: absolute;
