--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -15,17 +15,17 @@
     color:$white;
     height: calc(100vh - 70px);
     // .cameras{
-    //   height:20px;  
+    //   height:20px;
     //   background-image: url('/images/Icons/Tags/Photo/Default.svg');
     //   background-repeat: no-repeat;
     // }
     // .drones{
-    //   height:20px;  
-    //   background-image: url('/images/Icons/Tags/drone/Default.svg');  
-    //   background-repeat: no-repeat;    
+    //   height:20px;
+    //   background-image: url('/images/Icons/Tags/drone/Default.svg');
+    //   background-repeat: no-repeat;
     // }
     // .lights{
-    //   height:20px;  
+    //   height:20px;
     //   background-image: url('/images/Icons/Tags/lights/Default.svg');
     //   background-repeat: no-repeat;
     // }
@@ -51,14 +51,46 @@
       display: flex;
       margin-top: 30px;
       align-items: flex-end;
+      max-width: 800px;
 
-      .custom-input {
-        margin-right: 15px;
+      button {
+        width: auto;
+        pointer-events: none;
       }
     }
 
     input {
       color: white;
+    }
+
+    .list-group {
+      @extend .theme-text-small;
+      max-height: 200px;
+      overflow: auto;
+      .list-group-item {
+        border-radius: 0;
+        color: #333;
+        padding: 5px 15px;
+        border: 0;
+        cursor: pointer;
+      }
+    }
+
+    .location-input {
+      flex: 1;
+      margin-right: 15px;
+      position: relative;
+    }
+
+    .search-input {
+      flex: 1.5;
+      position: relative;
+      margin-right: 15px;
+    }
+
+    .search-suggestions {
+      width: 100%;
+      position: absolute;
     }
   }
   .home-body{
@@ -138,9 +170,9 @@
     .theme-row{
       .theme-col{
         display: flex;
-        -webkit-box-shadow: 1px 3px 2px 3px $gray-lighten; 
+        -webkit-box-shadow: 1px 3px 2px 3px $gray-lighten;
         -moz-box-shadow:    1px 3px 2px 3px $gray-lighten;
-        box-shadow:         1px 3px 2px 3px $gray-lighten; 
+        box-shadow:         1px 3px 2px 3px $gray-lighten;
         height: 200px;
         align-items: center;
         button{
@@ -155,16 +187,16 @@
           height:100%;
           margin: 0;
         }
-        div.desc{ 
+        div.desc{
           flex:1;
           display: flex;
           justify-content: center;
           flex-direction: column;
         }
-        #camera{          
+        #camera{
           background-image: url('/images/Icons/catogories/1 (1).jpg');
           background-repeat:no-repeat;
-          background-position: center;  
+          background-position: center;
           -webkit-transition: all 0.3s ease-in-out;
             -moz-transition: all 0.3s ease-in-out;
             -o-transition: all 0.3s ease-in-out;
@@ -177,42 +209,42 @@
         #drones{
           background-image: url('/images/Icons/catogories/1 (3).jpg');
           background-repeat:no-repeat;
-          background-position: center;          
+          background-position: center;
         }
         #lenses{
           background-image: url('/images/Icons/catogories/1 (4).jpg');
           background-repeat:no-repeat;
-          background-position: center;          
+          background-position: center;
         }
         #lighting{
           background-image: url('/images/Icons/catogories/1 (5).jpg');
           background-repeat:no-repeat;
-          background-position: center;          
+          background-position: center;
         }
         #audio{
           background-image: url('/images/Icons/catogories/1 (6).jpg');
           background-repeat:no-repeat;
-          background-position: center;          
+          background-position: center;
         }
         #tripods_stabilization_rigs{
           background-image: url('/images/Icons/catogories/1 (7).jpg');
           background-repeat:no-repeat;
-          background-position: center;          
+          background-position: center;
         }
         #camera_accessories{
           background-image: url('/images/Icons/catogories/1 (8).jpg');
           background-repeat:no-repeat;
-          background-position: center;          
+          background-position: center;
         }
         #studio_spaces{
           background-image: url('/images/Icons/catogories/1 (9).jpg');
           background-repeat:no-repeat;
-          background-position: center;          
+          background-position: center;
         }
         #office_spaces{
           background-image: url('/images/Icons/catogories/1 (10).jpg');
           background-repeat:no-repeat;
-          background-position: center;          
+          background-position: center;
         }
         #others{
           background-image: url('/images/Icons/catogories/1 (11).jpg');
@@ -232,35 +264,35 @@
           button{
           display: block;
           }
-          #camera{          
+          #camera{
             background-image: url('/images/Icons/catogories/1 (12).jpg');
           }
           #computer_electronic{
               background-image: url('/images/Icons/catogories/1 (13).jpg');
             }
           #drones{
-            background-image: url('/images/Icons/catogories/1 (14).jpg');         
+            background-image: url('/images/Icons/catogories/1 (14).jpg');
           }
           #lenses{
-            background-image: url('/images/Icons/catogories/1 (15).jpg');         
+            background-image: url('/images/Icons/catogories/1 (15).jpg');
           }
           #lighting{
-            background-image: url('/images/Icons/catogories/1 (16).jpg');         
+            background-image: url('/images/Icons/catogories/1 (16).jpg');
           }
           #audio{
-            background-image: url('/images/Icons/catogories/1 (17).jpg');         
+            background-image: url('/images/Icons/catogories/1 (17).jpg');
           }
           #tripods_stabilization_rigs{
-            background-image: url('/images/Icons/catogories/1 (18).jpg');         
+            background-image: url('/images/Icons/catogories/1 (18).jpg');
           }
           #camera_accessories{
-            background-image: url('/images/Icons/catogories/1 (19).jpg');          
+            background-image: url('/images/Icons/catogories/1 (19).jpg');
           }
           #studio_spaces{
-            background-image: url('/images/Icons/catogories/1 (20).jpg');          
+            background-image: url('/images/Icons/catogories/1 (20).jpg');
           }
           #office_spaces{
-            background-image: url('/images/Icons/catogories/1 (21).jpg');          
+            background-image: url('/images/Icons/catogories/1 (21).jpg');
           }
           #others{
             background-image: url('/images/Icons/catogories/1 (22).jpg');
