--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -167,138 +167,136 @@
 
       }
     }
-    .theme-row{
-      .theme-col{
-        display: flex;
-        -webkit-box-shadow: 1px 3px 2px 3px $gray-lighten;
-        -moz-box-shadow:    1px 3px 2px 3px $gray-lighten;
-        box-shadow:         1px 3px 2px 3px $gray-lighten;
-        height: 200px;
-        align-items: center;
-        button{
-          display: none;
-        }
-        span{
-          margin-bottom: 1rem;
-        }
-        p{
-          flex:1;
-          width:100%;
-          height:100%;
-          margin: 0;
-        }
-        div.desc{
-          flex:1;
-          display: flex;
-          justify-content: center;
-          flex-direction: column;
-        }
-        #camera{
-          background-image: url('/images/Icons/catogories/1 (1).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-          -webkit-transition: all 0.3s ease-in-out;
-            -moz-transition: all 0.3s ease-in-out;
-            -o-transition: all 0.3s ease-in-out;
-            transition: all 0.3s ease-in-out;
-        }
-        #computer_electronic{
-          background-image: url('/images/Icons/catogories/1 (2).jpg');
-          background-repeat:no-repeat;
-          background-position: center;        }
-        #drones{
-          background-image: url('/images/Icons/catogories/1 (3).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-        }
-        #lenses{
-          background-image: url('/images/Icons/catogories/1 (4).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-        }
-        #lighting{
-          background-image: url('/images/Icons/catogories/1 (5).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-        }
-        #audio{
-          background-image: url('/images/Icons/catogories/1 (6).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-        }
-        #tripods_stabilization_rigs{
-          background-image: url('/images/Icons/catogories/1 (7).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-        }
-        #camera_accessories{
-          background-image: url('/images/Icons/catogories/1 (8).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-        }
-        #studio_spaces{
-          background-image: url('/images/Icons/catogories/1 (9).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-        }
-        #office_spaces{
-          background-image: url('/images/Icons/catogories/1 (10).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-        }
-        #others{
-          background-image: url('/images/Icons/catogories/1 (11).jpg');
-          background-repeat:no-repeat;
-          background-position: center;
-        }
-        &:hover{
-          background-color: $primary-color;
-          -webkit-transition: all 0.3s ease-in-out;
-            -moz-transition: all 0.3s ease-in-out;
-            -o-transition: all 0.3s ease-in-out;
-            transition: all 0.3s ease-in-out;
-          cursor: pointer;
-          span{
-            color:$white;
-          }
-          button{
-          display: block;
-          }
-          #camera{
-            background-image: url('/images/Icons/catogories/1 (12).jpg');
-          }
-          #computer_electronic{
-              background-image: url('/images/Icons/catogories/1 (13).jpg');
-            }
-          #drones{
-            background-image: url('/images/Icons/catogories/1 (14).jpg');
-          }
-          #lenses{
-            background-image: url('/images/Icons/catogories/1 (15).jpg');
-          }
-          #lighting{
-            background-image: url('/images/Icons/catogories/1 (16).jpg');
-          }
-          #audio{
-            background-image: url('/images/Icons/catogories/1 (17).jpg');
-          }
-          #tripods_stabilization_rigs{
-            background-image: url('/images/Icons/catogories/1 (18).jpg');
-          }
-          #camera_accessories{
-            background-image: url('/images/Icons/catogories/1 (19).jpg');
-          }
-          #studio_spaces{
-            background-image: url('/images/Icons/catogories/1 (20).jpg');
-          }
-          #office_spaces{
-            background-image: url('/images/Icons/catogories/1 (21).jpg');
-          }
-          #others{
-            background-image: url('/images/Icons/catogories/1 (22).jpg');
-          }
-        }
-      }
+    
+    .block-el{
+      // .block-content{
+      //   display: flex;
+      //   align-items: center;
+      //   button{
+      //     display: none;
+      //   }
+      //   span{
+      //     margin-bottom: 1rem;
+      //   }
+      //   p{
+      //     flex:1;
+      //     width:100px;
+      //     height:100px;
+      //     margin: 0;
+      //   }
+      //   div.desc{ 
+      //     flex:1;
+      //     display: flex;
+      //     justify-content: center;
+      //     flex-direction: column;
+      //   }
+      //   #camera{          
+      //     background-image: url('/images/Icons/catogories/1 (1).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;  
+      //     -webkit-transition: all 0.3s ease-in-out;
+      //       -moz-transition: all 0.3s ease-in-out;
+      //       -o-transition: all 0.3s ease-in-out;
+      //       transition: all 0.3s ease-in-out;
+      //   }
+      //   #computer_electronic{
+      //     background-image: url('/images/Icons/catogories/1 (2).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;        }
+      //   #drones{
+      //     background-image: url('/images/Icons/catogories/1 (3).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;          
+      //   }
+      //   #lenses{
+      //     background-image: url('/images/Icons/catogories/1 (4).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;          
+      //   }
+      //   #lighting{
+      //     background-image: url('/images/Icons/catogories/1 (5).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;          
+      //   }
+      //   #audio{
+      //     background-image: url('/images/Icons/catogories/1 (6).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;          
+      //   }
+      //   #tripods_stabilization_rigs{
+      //     background-image: url('/images/Icons/catogories/1 (7).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;          
+      //   }
+      //   #camera_accessories{
+      //     background-image: url('/images/Icons/catogories/1 (8).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;          
+      //   }
+      //   #studio_spaces{
+      //     background-image: url('/images/Icons/catogories/1 (9).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;          
+      //   }
+      //   #office_spaces{
+      //     background-image: url('/images/Icons/catogories/1 (10).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;          
+      //   }
+      //   #others{
+      //     background-image: url('/images/Icons/catogories/1 (11).jpg');
+      //     background-repeat:no-repeat;
+      //     background-position: center;
+      //   }
+      //   &:hover{
+      //     background-color: $primary-color;
+      //     -webkit-transition: all 0.3s ease-in-out;
+      //       -moz-transition: all 0.3s ease-in-out;
+      //       -o-transition: all 0.3s ease-in-out;
+      //       transition: all 0.3s ease-in-out;
+      //     cursor: pointer;
+      //     span{
+      //       color:$white;
+      //     }
+      //     button{
+      //     display: block;
+      //     }
+      //     #camera{          
+      //       background-image: url('/images/Icons/catogories/1 (12).jpg');
+      //     }
+      //     #computer_electronic{
+      //         background-image: url('/images/Icons/catogories/1 (13).jpg');
+      //       }
+      //     #drones{
+      //       background-image: url('/images/Icons/catogories/1 (14).jpg');         
+      //     }
+      //     #lenses{
+      //       background-image: url('/images/Icons/catogories/1 (15).jpg');         
+      //     }
+      //     #lighting{
+      //       background-image: url('/images/Icons/catogories/1 (16).jpg');         
+      //     }
+      //     #audio{
+      //       background-image: url('/images/Icons/catogories/1 (17).jpg');         
+      //     }
+      //     #tripods_stabilization_rigs{
+      //       background-image: url('/images/Icons/catogories/1 (18).jpg');         
+      //     }
+      //     #camera_accessories{
+      //       background-image: url('/images/Icons/catogories/1 (19).jpg');          
+      //     }
+      //     #studio_spaces{
+      //       background-image: url('/images/Icons/catogories/1 (20).jpg');          
+      //     }
+      //     #office_spaces{
+      //       background-image: url('/images/Icons/catogories/1 (21).jpg');          
+      //     }
+      //     #others{
+      //       background-image: url('/images/Icons/catogories/1 (22).jpg');
+      //     }
+      //   }
+      // }
+
     }
     .new_arrival{
       background-image: url('/images/1(1).jpg');
@@ -330,10 +328,130 @@
   padding: 30px;
   margin: 10px;
   float: left;
+  
+}
+.block-el:hover .block-bg{
+  background-color: $primary-color;
+}
+.block-el:hover .block-content{
+  span{
+    color:$white;
+  }
+  button{
+    display: block;
+  }
+  #camera{          
+    background-image: url('/images/Icons/catogories/1 (12).jpg');
+  }
+  #computer_electronic{
+      background-image: url('/images/Icons/catogories/1 (13).jpg');
+    }
+  #drones{
+    background-image: url('/images/Icons/catogories/1 (14).jpg');         
+  }
+  #lenses{
+    background-image: url('/images/Icons/catogories/1 (15).jpg');         
+  }
+  #lighting{
+    background-image: url('/images/Icons/catogories/1 (16).jpg');         
+  }
+  #audio{
+    background-image: url('/images/Icons/catogories/1 (17).jpg');         
+  }
+  #tripods_stabilization_rigs{
+    background-image: url('/images/Icons/catogories/1 (18).jpg');         
+  }
+  #camera_accessories{
+    background-image: url('/images/Icons/catogories/1 (19).jpg');          
+  }
+  #studio_spaces{
+    background-image: url('/images/Icons/catogories/1 (20).jpg');          
+  }
+  #office_spaces{
+    background-image: url('/images/Icons/catogories/1 (21).jpg');          
+  }
+  #others{
+    background-image: url('/images/Icons/catogories/1 (22).jpg');
+  }
 }
 .block-content{
-    position: relative;
-    z-index: 3333;
+  position: relative;
+  z-index: 3333;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  button{
+    display: none;
+  }
+  span{
+    margin-bottom: 1rem;
+  }
+  p{
+    flex:1;
+    width:100px;
+    height:100px;
+    margin: 0;
+  }
+  div.desc{ 
+    flex:1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  #camera{          
+    background-image: url('/images/Icons/catogories/1 (1).jpg');
+    background-repeat:no-repeat;
+    background-position: center; 
+  }
+   #computer_electronic{
+    background-image: url('/images/Icons/catogories/1 (2).jpg');
+    background-repeat:no-repeat;
+    background-position: center;        }
+  #drones{
+    background-image: url('/images/Icons/catogories/1 (3).jpg');
+    background-repeat:no-repeat;
+    background-position: center;          
+  }
+  #lenses{
+    background-image: url('/images/Icons/catogories/1 (4).jpg');
+    background-repeat:no-repeat;
+    background-position: center;          
+  }
+  #lighting{
+    background-image: url('/images/Icons/catogories/1 (5).jpg');
+    background-repeat:no-repeat;
+    background-position: center;          
+  }
+  #audio{
+    background-image: url('/images/Icons/catogories/1 (6).jpg');
+    background-repeat:no-repeat;
+    background-position: center;          
+  }
+  #tripods_stabilization_rigs{
+    background-image: url('/images/Icons/catogories/1 (7).jpg');
+    background-repeat:no-repeat;
+    background-position: center;          
+  }
+  #camera_accessories{
+    background-image: url('/images/Icons/catogories/1 (8).jpg');
+    background-repeat:no-repeat;
+    background-position: center;          
+  }
+  #studio_spaces{
+    background-image: url('/images/Icons/catogories/1 (9).jpg');
+    background-repeat:no-repeat;
+    background-position: center;          
+  }
+  #office_spaces{
+    background-image: url('/images/Icons/catogories/1 (10).jpg');
+    background-repeat:no-repeat;
+    background-position: center;          
+  }
+  #others{
+    background-image: url('/images/Icons/catogories/1 (11).jpg');
+    background-repeat:no-repeat;
+    background-position: center;
+  }
 }
 .block-el > .block-bg {
   position: absolute;
@@ -342,19 +460,30 @@
   left: 0;
   top: 0;
   background-color: $white;
-  transform: skewX(-25deg);
-  box-shadow: 0 0 10px #aaa;
+  transform: skewX(-15deg);
+  box-shadow: 2px 2px 17px 0px #eee;
   border-radius: 2px;
-  // &:hover{
-  //   background-color: $primary-color;
-  // }
-  // &::before{
-  //   content: '';
-  //   position: absolute;
-  //   z-index: 333;
-  //   border-style: solid;
-  //   border:#fff;
-  //   transform: skewX(20deg) translateX(-35px);
-  //   border-width:200px 50px 0 30px;
-  // }
+}
+
+.block-el:first-child .block-bg::before{
+  content: '';
+  position: absolute;
+  z-index: 333;
+  width: 65px;
+  height: 210px;
+  transform: skewX(15deg) translateX(-35px);
+  background-color: #fff;
+}
+
+.block-el:last-child .block-bg::before{
+    content: '';
+    position: absolute;
+    right: -74px;
+    top:-10px;
+    z-index: 333;
+    width: 65px;
+    height: 210px;
+    -webkit-transform: skewX(15deg) translateX(-35px);
+    transform: skewX(15deg) translateX(-35px);
+    background-color: #ffff;
 }
