Refined addgear and register page

--- a/src/scss/addgear.scss
+++ b/src/scss/addgear.scss
@@ -155,6 +155,11 @@
         flex: 1;
       }
     }
+
+    .custom-input {
+      width: auto;
+      flex: 1;
+    }
   }
 
   .success-message {
