--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -159,6 +159,7 @@
       padding-right: 30px;
       img {
         height: 32px;
+        width: 32px;
         border-radius: 50%;
       }
       &:focus{
